--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/tamara/snap/netbeans/common/data/12.2/build.properties
+user.properties.file=C:\\Users\\tamip\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
